# taskManger

./: .taskctlrc  CMakeLists.txt  ITaskStorage.h  JsonTaskStorage.cpp  JsonTaskStorage.h  README.md  TaskManager.h  docker-compose.yml  dockerfile  main.cpp
.github/workflows/: ci.yml
include/: Task.h  TaskClient.h  TaskManager.h  TaskServer.h
src/: JsonTaskStorage.cpp  TaskClient.cpp  TaskManager.cpp  TaskServer.cpp  main.cpp  taskctl.cpp
test/: JsonTaskStorage.cpp  Task.cpp  TaskManager.cpp  gtest_JsonTaskStorage.cpp  gtest_Task.cpp  gtest_TaskManager.cpp
